# aauto

./: .gitignore  CMakeLists.txt  LICENSE.txt  README
CMakeModules/: FindAVCodec.cmake  FindLibUSB.cmake
src/: aa_helpers.cpp  aa_helpers.h  crypto.cpp  crypto.h  decoder.cpp  decoder.h  main.cpp  proto.cpp  proto.h  scope_guard.h  transport.cpp  transport.h  utils.cpp  utils.h
